[DSTEW-1814] - Test file clean up